chapter04/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-server
  namespace: dev
  labels:
    app: hello-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-server
  template:
    metadata:
      labels:
        app: hello-server
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: hello-server
        image: manabujahana/chapter01:1.0.0
        ports:
        - containerPort: 80
