chapter04/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-server-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: hello-server                # ← Service を利用したい Pod のラベルと一致させる
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80                 # ← 利用するコンテナが開放している Port を指定する
