chapter04/manifest/service_node.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx          # ← Service を利用したい Pod のラベルと一致させる
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80    # ← 利用するコンテナが開放している Port を指定する
      nodePort: 30080   # ← 30000-32767 の範囲で指定
