chapter04/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-server-ingress
  namespace: dev
spec:
  ingressClassName: nginx          # ← ingress のCLASSを指定
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-server-service
            port:
              number: 80
